--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 
 .form-title {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   color: #787878;
   font-size: 50px;
   text-align: center;
@@ -37,7 +37,7 @@ body {
 
 .form__email-title, .form__password-title, .form__item-title {
   margin-left: 12px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 16px;
   color: #787878;
   font-weight: 700;
@@ -45,31 +45,31 @@ body {
 }
 
 
-.starOne::before {
+.asteriskOne::before {
   content: '*';
   position: absolute;
   left: 35px;
   top: 110px;
   font-size: 18px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
 }
 
-.starTwo::before {
+.asteriskTwo::before {
   content: '*';
   position: absolute;
   left: 35px;
   bottom: 200px;
   font-size: 18px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
 }
 
-.starThree::before {
+.asterisk::before {
   content: '*';
   position: absolute;
   left: 35px;
   bottom: 140px;
   font-size: 18px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
 }
 
 .form__email-input, .form__password-input {
@@ -79,7 +79,7 @@ body {
   border: 3px solid #787878;
   border-radius: 10px;
   padding-left: 15px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto, sans-serif', sans-serif;
   font-size: 28px;
   color: black;
   font-weight: 700;
@@ -93,7 +93,7 @@ body {
   display: none;
   color: #CB2424;
   align-self: flex-start;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 10px;
   font-weight: 500;
   margin-left: 2px;
@@ -118,7 +118,7 @@ input {
 .form__bottom {
   max-width: 385px;
   margin-top: 9px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
   display: flex;
   flex-wrap: wrap;
@@ -135,28 +135,14 @@ input {
   height: 52px;
   background-color: #1A226B;
   border-radius: 10px;
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 24px;
   color: white;
   font-weight: 700;
-  margin: 20px 164px 0px 164px;
+  margin: 20px 164px 0 164px;
   cursor: pointer;
   position: absolute;
   bottom: 26px;
-}
-
-.form-star {
-  position: relative;
-  left: -262px;
-  bottom: -21px;
-}
-
-
-.form-star-other {
-  size: 18px;
-  position: relative;
-  left: -8px;
-  bottom: 3px;
 }
 
 .form-registration {
